--- a/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleSecondPoint.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/SurveyLifeStyleSecondPoint.storyboard
@@ -41,29 +41,29 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일주일에 몇 회 이상" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jq4-sv-jDS">
-                                <rect key="frame" x="18" y="149" width="189" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="하루에 햇빛을 받으며" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jq4-sv-jDS">
+                                <rect key="frame" x="18" y="149" width="205.5" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="를 섭취하시나요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPv-1a-JLz">
-                                <rect key="frame" x="131.5" y="191" width="170.5" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="을 얼마나 하시나요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPv-1a-JLz">
+                                <rect key="frame" x="104.5" y="191" width="197.5" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="녹황색 채소" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2oK-tx-PLo">
-                                <rect key="frame" x="18" y="191" width="113.5" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="야외활동" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2oK-tx-PLo">
+                                <rect key="frame" x="18" y="191" width="86.5" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <color key="textColor" red="0.92156862750000001" green="0.94117647059999998" blue="0.69019607839999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3ZX-yI-JLv">
-                                <rect key="frame" x="44" y="265" width="102" height="24"/>
+                                <rect key="frame" x="26" y="265" width="120" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="   7회 이상" image="icUnselected">
+                                <state key="normal" title="   4시간 이상" image="icUnselected">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <state key="selected" image="icSelected"/>
@@ -72,10 +72,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="51z-Te-XdD">
-                                <rect key="frame" x="44" y="309" width="114" height="24"/>
+                                <rect key="frame" x="26" y="309" width="146" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="   5회 ~ 6회" image="icUnselected">
+                                <state key="normal" title="   1시간 ~ 4시간" image="icUnselected">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <state key="selected" image="icSelected"/>
@@ -84,27 +84,15 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CGp-ug-oT9">
-                                <rect key="frame" x="44" y="353" width="115" height="24"/>
+                                <rect key="frame" x="26" y="353" width="117" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="   3회 ~ 4회" image="icUnselected">
+                                <state key="normal" title="   1시간 이하" image="icUnselected">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <state key="selected" image="icSelected"/>
                                 <connections>
                                     <action selector="selectedAnswer:" destination="FYJ-c6-MpY" eventType="touchUpInside" id="L5d-QQ-cmA"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wYv-QJ-g8x">
-                                <rect key="frame" x="44" y="397" width="102" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="   2회 이하" image="icUnselected">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <state key="selected" image="icSelected"/>
-                                <connections>
-                                    <action selector="selectedAnswer:" destination="FYJ-c6-MpY" eventType="touchUpInside" id="rbO-YH-9VW"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pj0-Kv-AEt">
@@ -169,7 +157,6 @@
                             <constraint firstItem="QV5-VJ-Upe" firstAttribute="top" secondItem="beb-hT-WgV" secondAttribute="top" constant="44" id="E1g-bQ-v4e"/>
                             <constraint firstItem="CGp-ug-oT9" firstAttribute="top" secondItem="51z-Te-XdD" secondAttribute="bottom" constant="20" id="He0-sf-Vcg"/>
                             <constraint firstItem="3Ks-cY-QCA" firstAttribute="top" secondItem="Z4U-sq-Gk2" secondAttribute="top" id="IZj-qM-V2N"/>
-                            <constraint firstItem="wYv-QJ-g8x" firstAttribute="top" secondItem="CGp-ug-oT9" secondAttribute="bottom" constant="20" id="JbK-FN-4Lg"/>
                             <constraint firstItem="2oK-tx-PLo" firstAttribute="top" secondItem="Jq4-sv-jDS" secondAttribute="bottom" constant="12" id="LtN-HN-sSI"/>
                             <constraint firstItem="beb-hT-WgV" firstAttribute="bottom" secondItem="Pj0-Kv-AEt" secondAttribute="bottom" constant="18" id="RLt-Hc-Lde"/>
                             <constraint firstItem="I7P-du-YdD" firstAttribute="top" secondItem="QV5-VJ-Upe" secondAttribute="bottom" constant="3" id="Sbv-CB-dX8"/>
@@ -178,8 +165,7 @@
                             <constraint firstItem="3Ks-cY-QCA" firstAttribute="leading" secondItem="beb-hT-WgV" secondAttribute="leading" id="Z73-wj-Bj0"/>
                             <constraint firstItem="beb-hT-WgV" firstAttribute="trailing" secondItem="3Ks-cY-QCA" secondAttribute="trailing" id="Zyi-wV-Hyo"/>
                             <constraint firstItem="E5e-sq-rtK" firstAttribute="centerX" secondItem="Z4U-sq-Gk2" secondAttribute="centerX" id="aIg-pE-b1u"/>
-                            <constraint firstItem="E5e-sq-rtK" firstAttribute="top" secondItem="wYv-QJ-g8x" secondAttribute="bottom" constant="112" id="g90-LW-JqW"/>
-                            <constraint firstItem="wYv-QJ-g8x" firstAttribute="leading" secondItem="CGp-ug-oT9" secondAttribute="leading" id="i6F-gx-JEJ"/>
+                            <constraint firstItem="E5e-sq-rtK" firstAttribute="top" secondItem="CGp-ug-oT9" secondAttribute="bottom" constant="156" id="gkZ-4F-YY6"/>
                             <constraint firstItem="I7P-du-YdD" firstAttribute="trailing" secondItem="QV5-VJ-Upe" secondAttribute="trailing" id="m0F-Ag-DFH"/>
                             <constraint firstItem="BPv-1a-JLz" firstAttribute="top" secondItem="2oK-tx-PLo" secondAttribute="top" id="mt1-7F-KC7"/>
                             <constraint firstItem="3ZX-yI-JLv" firstAttribute="top" secondItem="2oK-tx-PLo" secondAttribute="bottom" constant="44" id="pW0-00-W9Q"/>
@@ -196,7 +182,6 @@
                         <outlet property="answerBtn0" destination="3ZX-yI-JLv" id="uab-8O-lwU"/>
                         <outlet property="answerBtn1" destination="51z-Te-XdD" id="mdz-VU-yPr"/>
                         <outlet property="answerBtn2" destination="CGp-ug-oT9" id="7dp-vY-mG2"/>
-                        <outlet property="answerBtn3" destination="wYv-QJ-g8x" id="du1-xD-VvG"/>
                         <outlet property="nameLbl" destination="Gbq-BU-pZO" id="u9x-2h-oeL"/>
                         <outlet property="nextBtn" destination="Pj0-Kv-AEt" id="g28-iQ-xe9"/>
                     </connections>
